--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <li><a href="https://arrow-ghost.github.io/My-School-and-The-7-Mantras-Be-Bonded/">Be Bonded</a></li>
             <li><a href="https://arrow-ghost.github.io/My-School-and-the-7-Mantras-Be-Respectful/">Be Respectful</a></li>
             <li><a href="https://arrow-ghost.github.io/My-School-and-the-7-Mantras-Be-Passionate/">Be Passionate</a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href="https://arrow-ghost.github.io/My-School-and-the-7-Mantras-Be-Proactive/">Be Proactive</a></li>
+            <li><a href="https://arrow-ghost.github.io/My-School-and-the-7-Mantras-Be-Punctual/">Be Punctual</a></li>
+            <li><a href="https://arrow-ghost.github.io/My-School-and-the-7-Mantras-About-Me/">About Me</a></li>
         </ul>
     </nav>
 
